# alex

./: Cargo.toml  alladin.go  flake.nix  go.mod  justfile
_nix/: alex.nix  pkg.nix  shell.nix
data/: request_packet.fbs  response_packet.fbs
nix/: package.nix  shell.nix
src/: cli.rs  constants.rs  daemon.rs  error.rs  lib.rs  main.rs  request.rs  response.rs  status.rs  utils.rs
src/command/: mod.rs  player_cmd.rs  reload_cmd.rs  search_cmd.rs  status_cmd.rs
src/daemon/: command.rs  command_handler.rs  listener.rs  mod.rs  player.rs  player.rs.bak
src/daemon/command/: mod.rs  player_cmd.rs  reload_cmd.rs  search_cmd.rs
src/flatbuffers_gen/: mod.rs  request_packet_.rs  response_packet_.rs
src/handlers/: mod.rs  player_handler.rs  reload_handler.rs  search_handler.rs  status_handler.rs
src/player/: engine.rs  index.rs  indexer.rs  mod.rs  mod.rs.bak  storage.rs
src/protocol/: mod.rs  request.rs  response.rs
src/services/: mod.rs  playback.rs  server.rs
