[package]
name = "alex"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
crossbeam = { version = "0.8.4", default-features = false, features = [
  "std",
  "crossbeam-channel",
] }
env_logger = "0.11.8"
log = "0.4.29"
rodio = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2.5.0"

[profile.dev]
opt-level = 0
debug = 1
incremental = true
