[package]
name = "alex"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcode = { version = "0.6.9", features = ["serde"] }
blake3 = "1.8.3"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.8"
flatbuffers = "25.12.19"
log = "0.4.29"
rodio = { version = "0.21.1", default-features = false, features = [
  "playback",
  "symphonia-all",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
# symphonia = { version = "0.5.5", default-features = false, features = ["all"] }
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2.5.0"

[profile.dev]
incremental = true
