[package]
name = "alex"
version = "0.1.1"
edition = "2024"

[dependencies]
bitcode = { version = "0.6.9", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.8"
lofty = "0.23.1"
log = "0.4.29"
rand = "0.10.0"
rodio = { version = "0.21.1", default-features = false, features = [
  "playback",
  "symphonia-all",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
stop-words = "0.9.0"
strsim = "0.11.1"
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2.5.0"

[profile.dev]
incremental = true
